[package]
name = "translucent"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
log = "0.4.22"
simple_logger = "5.0.0"
tokio = { version = "1.38.1", features = ["full"] }

[features]
debug = []

[[bin]]
name = "tllocal"
path = "src/local/main.rs"

[[bin]]
name = "tlserver"
path = "src/server/main.rs"
