[package]
name = "translucent"
version = "0.1.0"
authors = ["Ariel <arielherself@duck.com>"]
description = "A general proxy service."
readme = "README.md"
repository = "https://codeberg.org/arielherself/translucent"
license = "MIT"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
derive_more = "0.99.18"
log = "0.4.22"
simple_logger = "5.0.0"
tokio = { version = "1.38.1", features = ["full"] }

[features]
debug = []

[[bin]]
name = "tllocal"
path = "bin/tllocal.rs"

[[bin]]
name = "tlserver"
path = "bin/tlserver.rs"
